syslog-ng (3.3.5-1+mhp1) unstable; urgency=low

  * [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Packaging synced with GCS.

 -- Gergely Nagy <algernon@madhouse-project.org>  Fri, 11 May 2012 11:36:53 +0200

syslog-ng (3.3.5-1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New upstream release.
    + afsocket: handle DNS failures as if it was a connection failure
      (Closes: #660897)
  * All patches dropped, they're applied upstream.
  * Include upstream man pages, as they're DFSG-free now.
  * Update debian/copyright for 1.0 of the spec.
  * Bump Standards-Version to 3.9.3 (no changes required)
  * Fix squeeze->wheezy install-remove-install upgrade path.
    (Closes: #665905)
  * Fix the init script to create /dev/xconsole properly on GNU/kFreeBSD.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.hu>  Thu, 03 May 2012 08:23:46 +0000
 
syslog-ng (3.3.5-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New upstream release.
    + afsocket: handle DNS failures as if it was a connection failure
      (Closes: #660897)
  * All patches dropped, they're applied upstream.
  * Include upstream man pages, as they're DFSG-free now.
  * Update debian/copyright for 1.0 of the spec.
  * Bump Standards-Version to 3.9.3 (no changes required)
  * Fix squeeze->wheezy install-remove-install upgrade path.
    (Closes: #665905)
  * Fix the init script to create /dev/xconsole properly on GNU/kFreeBSD.

 -- Gergely Nagy <algernon@madhouse-project.org>  Mon, 16 Apr 2012 15:22:59 +0200

syslog-ng (3.3.4.dfsg-2~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Packaging synced with GCS.
  * Patches applied:
    + Fix framing issues with the syslog protocol, based on a patch by
      Zoltan Fried <deirf@balabit.hu>.
    + afsql: Fix a deadlock when using explicit commits.
    + afmongodb: Fix a deadlock at deinit time.
