@@ -1,1 +1,3 @@
 /etc/syslog-ng/conf.d/
+/etc/systemd/system/multi-user.target.wants/
+/lib/systemd/system/
